--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2? family=Raleway:ital,weight@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900 & display=swap');
 
 // variables
 $clr-black: #000;
 $clr-white: #fff;
 $font-raleway: 'Raleway', sans-serif;
-$clr-orange: #E16120;
+$clr-orange:  #08a50f  ;
 $clr-dark-orange: #C5541A;
 $clr-green: #3A9691;
 $clr-gray: #707070;
@@ -13,7 +13,6 @@ $clr-dark: #232323;
 $clr-whitesmoke: #f5f5f5;
 $transition: all 300ms ease-in-out;
 
-// global styles & resets
 *,
 *::after,
 *::before{
@@ -33,6 +32,10 @@ body{
   line-height: 1.6;
   color: $clr-black;
   font-family: $font-raleway;
+}
+
+*{
+  scrollbar-width: thin;
 }
 
 ul{
@@ -67,7 +70,7 @@ input, textarea, select{
   font-size: 1.6rem;
 }
 
-/* custom utility classes */
+
 .container{
   max-width: 1320px;
   margin: 0 auto;
