--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -1,5 +1,109 @@
-.loader{
-    img{
-        width: 70px;
+// // .loader{
+// //     img{
+// //         width: 70px;
+// //     }
+// // }
+
+// /* From Uiverse.io by doniaskima */ 
+// /* HTML: <div class="loader"></div> */
+// /* From Uiverse.io by vikramsinghnegi */ 
+// .blob {
+//   width: 112px;
+//   height: 112px;
+//   display: grid;
+//   background: #fff;
+//   filter: blur(5.6px) contrast(10);
+//   padding: 11.2px;
+//   mix-blend-mode: darken;
+// }
+
+
+// .blob:before,
+// .blob:after {
+//   content: "";
+//   grid-area: 1/1;
+//   width: 44.8px;
+//   height: 44.8px;
+//   background: #474bff;
+//   animation: blob-rhf26m 2s infinite;
+// }
+
+// .blob:after {
+//   animation-delay: -1s;
+// }
+
+// @keyframes blob-rhf26m {
+//   0% {
+//     transform: translate(0, 0);
+//   }
+
+//   25% {
+//     transform: translate(100%, 0);
+//   }
+
+//   50% {
+//     transform: translate(100%, 100%);
+//   }
+
+//   75% {
+//     transform: translate(0, 100%);
+//   }
+
+//   100% {
+//     transform: translate(0, 0);
+//   }
+// }
+
+/* Center the loader */
+  .loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .blob {
+    width: 50px;
+    height: 50px;
+    display: grid;
+    background: #fff;
+    padding: 11.2px;
+    
+    
+  }
+  
+  .blob:before,
+  .blob:after {
+    content: "";
+    grid-area: 1/1;
+    width: 35.8px;
+    height: 35.8px;
+    background:  #f95701 ;
+    animation: blob-rhf26m 2s infinite;
+  }
+  
+  .blob:after {
+    animation-delay: -1s;
+  }
+  
+  @keyframes blob-rhf26m {
+    0% {
+      transform: translate(0, 0);
     }
-}
+  
+    25% {
+      transform: translate(100%, 0);
+    }
+  
+    50% {
+      transform: translate(100%, 100%);
+    }
+  
+    75% {
+      transform: translate(0, 100%);
+    }
+  
+    100% {
+      transform: translate(0, 0);
+    }
+  }
+  
